Some Page Optimization
+ Shifted location of Jquery script to bottom.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,14 @@
 <meta name="keywords" content="{{page.meta-keywords}}">
 <meta name="author" content="Gabriel Mitchell">
 <meta name="copyright" content="©Gabriel Mitchell">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> -->
 </head>
 <body>
 	
 	{{content}}
 	
+	<!-- JQUERY -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>	
 	<!-- Nav & Other General JS -->
 	<script src="js/general.js"></script>
 	<script src="js/waypoints.min.js"></script>
