--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <title>Gabriel Mitchell Portoflio · {{page.title}}</title>
 <link href="{{site.baseurl}}css/main.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-<link href="/favicon.ico" rel="icon" type="image/x-icon" />
+<link href="http://gabrielmitchell.ca/favicon.ico" rel="icon" type="image/x-icon" />
 <meta name="handheldfriendly" content="true">
 <meta name="mobileoptimized" content="240">
 <meta name="viewport" content="width=device-width,initial-scale=1" >
