You think creating a Sprite would be easier...
- ughhh

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,30 +4,30 @@
 <div class="contact nav-bar-center unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8"> <!-- why does this work. why does div not wrap. why. *anger emoji* -->
 	<div class="wrap">
 		<ul class="grid cell w400">
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8" id="behance" class="social-icons behance">
 				<a href="https://www.behance.net/gabrielmitchell">
-					<img src="http://placehold.it/100x100" alt="Link to Works on Behance">
+					<img src="/images/transparent.svg" alt="Link to Works on Behance">
 					Behance
 				</a>
 				<p class="atom">See more works</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="http://design-and-disdain.tumblr.com/">
-					<img src="http://placehold.it/100x100" alt="Link to awesome things on Tumblr">
+				<a href="http://design-and-disdain.tumblr.com/" id="tumblr" class="social-icons tumblr">
+					<img src="/images/transparent.svg" alt="Link to awesome things on Tumblr">
 					Tumblr
 				</a>
 				<p class="atom">Inspiration, Wanderlust, Design, and Photography</p>
 			</li>
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8" id="twitter" class="social-icons">
 				<a href="https://twitter.com/thericeshogun">
-					<img src="http://placehold.it/100x100" alt="Link to weird conversations on Twitter">
+					<img src="/images/transparent.svg" alt="Link to weird conversations on Twitter">
 					Twitter
 				</a>
 				<p class="atom">3AM conversations</p>
 			</li>
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8"  id="instagram" class="social-icons instagram">
 				<a href="http://instagram.com/thericeshogun">
-					<img src="http://placehold.it/100x100" alt="Link to Photos on Instagram">
+					<img src="/images/transparent.svg" alt="Link to Photos on Instagram">
 					Instagram
 				</a>
 				<p class="atom">Works in progress and weird life happenings</p>
