Giving up on Sprites.
+ Almost there, they just need to be properly positioned, but they
aren’t moving!?

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,33 +1,33 @@
 <h2 class="center-text">Let's Create Some Cool Stuff Together!</h2>
 <h6 class="cell center-text top-none">Get in touch or send me secret messages in Morse code</h6>
 
-<div class="contact nav-bar-center unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8"> <!-- why does this work. why does div not wrap. why. *anger emoji* -->
+<div class="contact nav-bar-center unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8">
 	<div class="wrap">
 		<ul class="grid cell w400">
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8" id="behance" class="social-icons behance">
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
 				<a href="https://www.behance.net/gabrielmitchell">
-					<img src="/images/transparent.svg" alt="Link to Works on Behance">
+					<img src="/images/transparent.svg" alt="Link to Works on Behance" class="behance">
 					Behance
 				</a>
 				<p class="atom">See more works</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="http://design-and-disdain.tumblr.com/" id="tumblr" class="social-icons tumblr">
-					<img src="/images/transparent.svg" alt="Link to awesome things on Tumblr">
+				<a href="http://design-and-disdain.tumblr.com/" id="tumblr">
+					<img src="/images/transparent.svg" alt="Link to awesome things on Tumblr" class="tumblr">
 					Tumblr
 				</a>
 				<p class="atom">Inspiration, Wanderlust, Design, and Photography</p>
 			</li>
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8" id="twitter" class="social-icons">
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
 				<a href="https://twitter.com/thericeshogun">
-					<img src="/images/transparent.svg" alt="Link to weird conversations on Twitter">
+					<img src="/images/transparent.svg" alt="Link to weird conversations on Twitter" class="twitter">
 					Twitter
 				</a>
 				<p class="atom">3AM conversations</p>
 			</li>
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8"  id="instagram" class="social-icons instagram">
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
 				<a href="http://instagram.com/thericeshogun">
-					<img src="/images/transparent.svg" alt="Link to Photos on Instagram">
+					<img src="/images/transparent.svg" alt="Link to Photos on Instagram"  class="instagram">
 					Instagram
 				</a>
 				<p class="atom">Works in progress and weird life happenings</p>
