--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -56,26 +56,24 @@ object {
 	width: 100px;
 	display: block;
 	margin: 0 auto;
+	background: url(../../images/social-icons.svg) no-repeat;
+	background-size: 100%; /* make sure it's set at 100% else you get weird auto fitting/sizing */
 }
 
-.social-icons {
-	background: url(../../images/social-icons.svg) no-repeat 0 0;
-}
-
-#behance {
+.behance {
 	background-position: 0px 0;
 }
 
-#tumblr {
-	background-position: -100px 0;
+.tumblr {
+	background-position: 0 100px;
 }
 
-#twitter {
-	background-position: -200px 0;
+.twitter {
+	background-position: 0 200px;
 }
 
-#instagram {
-	background-position: -300px 0;
+.instagram {
+	background-position: 0 300px;
 }
 
 @media only screen and (min-width: 10em) {
