--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	<!-- JQUERY -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>	
 	<!-- Nav & Other General JS -->
-	<script src="js/general.js"></script>
+	<script src="js/nav.js"></script> 
 	<script src="js/waypoints.min.js"></script>
 	<!-- Flexslider JS -->
 	<script src="js/jquery.flexslider.js"></script>
