--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div class="wrap buffer toggle">
-	<a href="#nav"><h3>Navigation</h3></a>	
+<!--	<a href="#nav"><h3>Navigation</h3></a>	-->
 	<nav class="nav nav-bar-center">
 		<ul class="planet">
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
