--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -1,7 +1,7 @@
 <div class="wrap object-center clearfix piece">
 	<div class="center-text wrap">
-		<h3 class="bottom-none">Extraordinarily Long Title for Portfolio Piece</h3>
-		<h5 class="top-none cell caption w100">This is a brief description</h5>
+		<h3 class="bottom-none">{{include.title}} dsfsd TEST</h3>
+		<h5 class="top-none cell caption w100">{{include.desc}}</h5>
 	</div>
 	<div class="wrap">
 		<!-- <div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
@@ -10,45 +10,44 @@
 		<div class="flexslider unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1"> <!-- FLEXSLIDER MODULE -->
 	
 		  <ul class="slides unit-r unit-s-1 unit-m-1 unit-l-1 unit-xl-1">
-			<li data-thumb="http://placehold.it/600x400/E14825/778899">
+			<li data-thumb="{{include.thumb1}}">
 				<div>
-					<img src="http://placehold.it/600x400/E14825/778899" alt="">
+					<img src="{{include.img1" alt="{{include.alt1}}">
 				</div>
 			</li>
-			<li data-thumb="http://placehold.it/600x400/778899/FFA500">
+			<li data-thumb="{{include.thumb2}}">
 				<div>
-					<img src="http://placehold.it/600x400/778899/FFA500" alt="">
+					<img src="{{include.img2" alt="{{include.alt2}}">
 				</div>
 			</li>
-			<li data-thumb="http://placehold.it/600x400/778899/E14825">
+			<li data-thumb="{{include.thumb3}}">
 				<div>
-					<img src="http://placehold.it/600x400/778899/E14825" alt="">
+					<img src="{{include.img3" alt="{{include.alt3}}">
 				</div>
 			</li>
-			<li data-thumb="http://placehold.it/600x400/FFA500/FFFFFF">
+			<li data-thumb="{{include.thumb4}}">
 				<div>
-					<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
+					<img src="{{include.img4" alt="{{include.alt4}}">
 				</div>
 			</li>
-			<li data-thumb="http://placehold.it/600x400/FFA500/FFFFFF">
+			<li data-thumb="{{include.thumb5}}">
 				<div>
-					<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
+					<img src="{{include.img5" alt="{{include.alt5}}">
 				</div>
 			</li>
-			<li data-thumb="http://placehold.it/600x400/FFA500/FFFFFF">
+			<li data-thumb="{{include.thumb6}}">
 				<div>
-					<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
+					<img src="{{include.img6" alt="{{include.alt6}}">
 				</div>
 			</li>
-			</li>
-			<li data-thumb="http://placehold.it/600x400/778899/FFA500">
+			<li data-thumb="{{include.thumb7}}">
 				<div>
-					<img src="http://placehold.it/600x400/778899/FFA500" alt="">
+					<img src="{{include.img7" alt="{{include.alt7}}">
 				</div>
 			</li>
-			<li data-thumb="http://placehold.it/600x400/FFFFFF/000000">
+			<li data-thumb="{{include.thumb8}}">
 				<div>
-					<img src="http://placehold.it/600x400/FFFFFF/000000" alt="">
+					<img src="{{include.img8" alt="{{include.alt8}}">
 				</div>
 			</li>
 		  </ul>
@@ -58,7 +57,7 @@
 				<ul>
 					<li>
 						<h3 class="center-text planet w100">About this Project</h3>
-						<p class="cell w400">with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+						<p class="cell w400">{{include.about}}</p>
 					</li>
 				</ul>
 			</div>
