--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -1,6 +1,6 @@
 <div class="wrap object-center clearfix piece">
 	<div class="center-text wrap">
-		<h3 class="bottom-none">{{include.title}} dsfsd TEST</h3>
+		<h3 class="bottom-none">{{include.title}}</h3>
 		<h5 class="top-none cell caption w100">{{include.desc}}</h5>
 	</div>
 	<div class="wrap">
@@ -15,36 +15,43 @@
 					<img src="{{include.img1" alt="{{include.alt1}}">
 				</div>
 			</li>
+			
 			<li data-thumb="{{include.thumb2}}">
 				<div>
 					<img src="{{include.img2" alt="{{include.alt2}}">
 				</div>
 			</li>
+			
 			<li data-thumb="{{include.thumb3}}">
 				<div>
 					<img src="{{include.img3" alt="{{include.alt3}}">
 				</div>
 			</li>
+			
 			<li data-thumb="{{include.thumb4}}">
 				<div>
 					<img src="{{include.img4" alt="{{include.alt4}}">
 				</div>
 			</li>
+			
 			<li data-thumb="{{include.thumb5}}">
 				<div>
 					<img src="{{include.img5" alt="{{include.alt5}}">
 				</div>
 			</li>
+			
 			<li data-thumb="{{include.thumb6}}">
 				<div>
 					<img src="{{include.img6" alt="{{include.alt6}}">
 				</div>
 			</li>
+			
 			<li data-thumb="{{include.thumb7}}">
 				<div>
 					<img src="{{include.img7" alt="{{include.alt7}}">
 				</div>
 			</li>
+			
 			<li data-thumb="{{include.thumb8}}">
 				<div>
 					<img src="{{include.img8" alt="{{include.alt8}}">
@@ -56,7 +63,7 @@
 			<div class="accordion">
 				<ul>
 					<li>
-						<h3 class="center-text planet w100">About this Project</h3>
+						<h3 class="center-text planet w100">About {{include.title}}</h3>
 						<p class="cell w400">{{include.about}}</p>
 					</li>
 				</ul>
