Forth Imagery & Thumbs Upped

--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -12,49 +12,49 @@
 		  <ul class="slides unit-r unit-s-1 unit-m-1 unit-l-1 unit-xl-1">
 			<li data-thumb="{{include.thumb1}}">
 				<div>
-					<img src="{{include.img1" alt="{{include.alt1}}">
+					<img src="{{include.img1}}" alt="{{include.alt1}}">
 				</div>
 			</li>
 			
 			<li data-thumb="{{include.thumb2}}">
 				<div>
-					<img src="{{include.img2" alt="{{include.alt2}}">
+					<img src="{{include.img2}}" alt="{{include.alt2}}">
 				</div>
 			</li>
 			
 			<li data-thumb="{{include.thumb3}}">
 				<div>
-					<img src="{{include.img3" alt="{{include.alt3}}">
+					<img src="{{include.img3}}" alt="{{include.alt3}}">
 				</div>
 			</li>
 			
 			<li data-thumb="{{include.thumb4}}">
 				<div>
-					<img src="{{include.img4" alt="{{include.alt4}}">
+					<img src="{{include.img4}}" alt="{{include.alt4}}">
 				</div>
 			</li>
 			
 			<li data-thumb="{{include.thumb5}}">
 				<div>
-					<img src="{{include.img5" alt="{{include.alt5}}">
+					<img src="{{include.img5}}" alt="{{include.alt5}}">
 				</div>
 			</li>
 			
 			<li data-thumb="{{include.thumb6}}">
 				<div>
-					<img src="{{include.img6" alt="{{include.alt6}}">
+					<img src="{{include.img6}}" alt="{{include.alt6}}">
 				</div>
 			</li>
 			
 			<li data-thumb="{{include.thumb7}}">
 				<div>
-					<img src="{{include.img7" alt="{{include.alt7}}">
+					<img src="{{include.img7}}" alt="{{include.alt7}}">
 				</div>
 			</li>
 			
 			<li data-thumb="{{include.thumb8}}">
 				<div>
-					<img src="{{include.img8" alt="{{include.alt8}}">
+					<img src="{{include.img8}}" alt="{{include.alt8}}">
 				</div>
 			</li>
 		  </ul>
