Social Media Icons Updated.
-CSS Sprites didn’t work
+ But icons show properly now.

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,28 +6,28 @@
 		<ul class="grid cell w400">
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
 				<a href="https://www.behance.net/gabrielmitchell">
-					<img src="/images/transparent.svg" alt="Link to Works on Behance" class="behance">
+					<img src="/images/icon-behance.svg" alt="Link to Works on Behance" class="behance">
 					Behance
 				</a>
 				<p class="atom">See more works</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
 				<a href="http://design-and-disdain.tumblr.com/" id="tumblr">
-					<img src="/images/transparent.svg" alt="Link to awesome things on Tumblr" class="tumblr">
+					<img src="/images/icon-tumblr.svg" alt="Link to awesome things on Tumblr" class="tumblr">
 					Tumblr
 				</a>
 				<p class="atom">Inspiration, Wanderlust, Design, and Photography</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
 				<a href="https://twitter.com/thericeshogun">
-					<img src="/images/transparent.svg" alt="Link to weird conversations on Twitter" class="twitter">
+					<img src="/images/icon-twitter.svg" alt="Link to weird conversations on Twitter" class="twitter">
 					Twitter
 				</a>
 				<p class="atom">3AM conversations</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
 				<a href="http://instagram.com/thericeshogun">
-					<img src="/images/transparent.svg" alt="Link to Photos on Instagram"  class="instagram">
+					<img src="/images/icon-instagram.svg" alt="Link to Photos on Instagram"  class="instagram">
 					Instagram
 				</a>
 				<p class="atom">Works in progress and weird life happenings</p>
