--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <meta name="description"	content="{{page.meta-desc}}">
 <meta name="keywords" content="{{page.meta-keywords}}">
 <meta name="author" content="Gabriel Mitchell">
-<meta name="copyright" content="©Gabriel Mitchell">
+<meta name="copyright" content="&copy; Gabriel Mitchell">
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> -->
 </head>
 <body>
