--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <h2 class="center-text">Let's Create Some Cool Stuff Together!</h2>
 <h6 class="cell center-text top-none">Get in touch or send me secret messages in Morse code</h6>
-<p class="w400">Or E-mail me: hello@gabrielmitchell.ca</p>
+<p class="w400 center-text">Or E-mail me: hello@gabrielmitchell.ca</p>
 
 <div class="contact nav-bar-center unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8">
 	<div class="wrap">
