--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -62,6 +62,13 @@ object {
 	margin: 0 auto;	
 }
 
+@media only screen and (min-width: 100em) {
+	.contact ul li a img {
+		width: 250px;
+	}
+
+}
+
 @media only screen and (min-width: 0em) {
 	.logo {
 		width: 15%;
