--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,34 +1,23 @@
 <h2 class="center-text">Let's Create Some Cool Stuff Together!</h2>
 <h6 class="cell center-text top-none">Get in touch or send me secret messages in Morse code</h6>
-<p class="w400 center-text">Or E-mail me: hello@gabrielmitchell.ca</p>
+<p class="w400 center-text">Or E-mail me: heythere@gabrielmitchell.ca</p>
 
-<div class="contact nav-bar-center unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8">
-	<div class="wrap">
-		<ul class="grid cell w400">
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="https://www.behance.net/gabrielmitchell">
-					<img src="/images/icon-behance.svg" alt="Link to Works on Behance" class="behance">
-					Behance
-				</a>
-			</li>
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="http://design-and-disdain.tumblr.com/" id="tumblr">
-					<img src="/images/icon-tumblr.svg" alt="Link to awesome things on Tumblr" class="tumblr">
-					Tumblr
-				</a>
-			</li>
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="https://twitter.com/thericeshogun">
-					<img src="/images/icon-twitter.svg" alt="Link to weird conversations on Twitter" class="twitter">
-					Twitter
-				</a>
-			</li>
-			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="http://instagram.com/thericeshogun">
-					<img src="/images/icon-instagram.svg" alt="Link to Photos on Instagram"  class="instagram">
-					Instagram
-				</a>
-			</li>
-		</ul>
-	</div>	
-</div>
+<div class="contact nav-bar-center unit-s-6-8 unit-m-3-8 unit-l-2-8 unit-xl-2-8">
+	<ul>
+		<li class="unit unit-s-33 unit-m-33 unit-l-33 unit-xl-33">
+			<a href="http://design-and-disdain.tumblr.com/" id="tumblr">
+				<img src="/images/icon-tumblr.svg" alt="Link to awesome things on Tumblr" class="tumblr">
+			</a>
+		</li>
+		<li class="unit unit-s-33 unit-m-33 unit-l-33 unit-xl-33">
+			<a href="https://twitter.com/thericeshogun">
+				<img src="/images/icon-twitter.svg" alt="Link to weird conversations on Twitter" class="twitter">
+			</a>
+		</li>
+		<li class="unit unit-s-33 unit-m-33 unit-l-33 unit-xl-33">
+			<a href="http://instagram.com/gabedrawstype">
+				<img src="/images/icon-instagram.svg" alt="Link to Photos on Instagram"  class="instagram">
+			</a>
+		</li>
+	</ul>
+</div>	
