--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -56,10 +56,10 @@ object {
 	background-color: #FA8072;
 }
 
-.contact ul li a img {
-	width: 125px;
+.contact ul {
 	display: block;
 	margin: 0 auto;	
+	overflow:hidden;
 }
 
 @media only screen and (min-width: 100em) {
