--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -34,28 +34,21 @@ LIGHTSLATEGRAY
 */
 
 .nav {
-	overflow:hidden;
 	width: 100%;
 	z-index: 9999;
-	-webkit-transition: all .25s ease-out ;
-	-moz-transition: all .25s ease-out;
-	-ms-transition: all .25s ease-out;
-	-o-transition: all .25s ease-out;
-	transition: all .25s ease-out;
 }
 
 .nav img {
-	-webkit-transition: all .25s ease-out ;
-	-moz-transition: all .25s ease-out;
-	-ms-transition: all .25s ease-out;
-	-o-transition: all .25s ease-out;
-	transition: all .25s ease-out;
+	-webkit-transition: all .15s ease-in ;
+	-moz-transition: all .25s ease-in;
+	-ms-transition: all .25s ease-in;
+	-o-transition: all .25s ease-in;
+	transition: all .25s ease-in;
 }
 
 .nav-bar-center {
 	display: block;
-	margin: auto auto;
-	overflow:visible;
+	margin: 0 auto;
 }
 
 .nav ul {
@@ -112,13 +105,18 @@ LIGHTSLATEGRAY
 }
 
 .sticky {  
-    position: fixed;  
-    width: 100%;  
-    left: 0;  
-    top: 0;  
-    z-index: 1001;  
-    border-top: 0; 
+	position: fixed;  
+	width: 75%;  
+	left: 12.5%;  
+	right: 12.5%;
+	top: 0;  
+	z-index: 1001;  
+	border-top: 0; 
 	background-color: #F5F5F5;
+}
+
+.sticky .nav li {
+	padding: 1rem 0;
 }
 
 .hide-text {
