--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Gabriel Mitchell Portoflio · {{page.title}}</title>
+<title>Gabriel Mitchell Portfolio · {{page.title}}</title>
 <link href="{{site.baseurl}}css/main.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
