--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,19 +3,19 @@
 		<ul class="planet">
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
 				<a href="http://gabrielmitchell.ca/#work">
-				<img src="images/logo-gm.svg" alt="" class="menu-btn">
+				<img src="images/logo3.svg" alt="" class="menu-btn">
 					Work
 				</a>
 			</li>
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
 				<a href="http://gabrielmitchell.ca/#about">
-				<img src="images/logo-gm.svg" alt="" class="menu-btn">
+				<img src="images/logo3.svg" alt="" class="menu-btn">
 					About
 				</a>
 			</li>
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
 				<a href="http://gabrielmitchell.ca/#contact">
-				<img src="images/logo-gm.svg" alt="" class="menu-btn">
+				<img src="images/logo3.svg" alt="" class="menu-btn">
 					Contact
 				</a>
 			</li>
