--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -116,3 +116,24 @@
 			<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
 		</div>
 		-->
+		
+	<input type="checkbox" id="op"></input>
+		<div class="lower">
+		  <label for="op">click the text</label>
+		</div>
+		<div class="overlay overlay-hugeinc">
+					<label for="op"></label>
+					<!--<nav>
+						<ul>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Work</a></li>
+							<li><a href="#">Clients</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</nav>-->
+					
+			<img src="../images/logo3.svg" alt="hi" class="object-center unit-s-1 unit-m-4-8 unit-l-3-8 unit-xl-1-8 unit-xxl-1-16">
+			<h2>name</h2>
+			<p>hi</p>
+		</div>
