--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
-<div class="wrap buffer toggle nav-bar-center unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8">
+<div class="wrap buffer toggle nav-bar-center unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 unit-xl-5-8">
 	<nav class="nav">
-		<ul class="planet">
+		<ul class="organism">
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
 				<a href="http://gabrielmitchell.ca/#work">
 				<img src="images/logo3.svg" alt="" class="menu-btn">
