--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -19,9 +19,10 @@
 
 	<header>
 		<a href="#nav" class="nav-btn hide-text">Navigatory Console</a>
-			<div class="wrap buffer toggle nav-bar-center unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8">
+		<div class="nav-top nav-toggle" data-state="collapsed">
+			<div class="wrap buffer toggle nav-bar-center unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 unit-xxl-5-8">
 				<nav class="nav">
-					<ul class="planet">
+					<ul class="organism">
 						<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
 							<a href="http://gabrielmitchell.ca/#work">
 								Work
@@ -40,9 +41,13 @@
 					</ul>
 				</nav>
 			</div>
+		</div>
 	</header>
 	
 	{{content}}
+	
+	
+	<small class="string center-text w100"><p>2015 © Gabriel Mitchell.</p></small>
 	
 	<!-- JQUERY -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>	
