--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <title>Gabriel Mitchell Portfolio · {{page.title}}</title>
 <link href="{{site.baseurl}}css/main.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Merriweather:300,300italic' rel='stylesheet' type='text/css'>
 <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <meta name="handheldfriendly" content="true">
 <meta name="mobileoptimized" content="240">
