--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 <p class="w400 center-text">E-mail: heythere@gabrielmitchell.ca</p>
 
 <div class="contact nav-bar-center unit-s-6-8 unit-m-3-8 unit-l-2-8 unit-xl-2-8">
-	<ul>
+	<ul class ="unit-s-1">
 		<li class="unit unit-s-33 unit-m-33 unit-l-33 unit-xl-33">
 			<a href="http://design-and-disdain.tumblr.com/" id="tumblr">
 				<img src="/images/icon-tumblr.svg" alt="Link to awesome things on Tumblr" class="tumblr">
