--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -1,139 +1,19 @@
-<div class="wrap object-center clearfix piece">
-	<div class="center-text wrap">
-		<h3 class="bottom-none">{{include.title}}</h3>
-		<h5 class="top-none cell caption w100">{{include.desc}}</h5>
-	</div>
-	<div class="wrap">
-		<!-- <div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
-			<img src="http://placehold.it/600x400/778899/F5F5F5" alt="">
-		</div> -->
-		<div class="flexslider unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1"> <!-- FLEXSLIDER MODULE -->
+
+<div class="fig unit unit-s-4-8 unit-m-33 unit-l-33 unit-xl-33 unit-xxl-2-8">
+	<figure class="piece-img unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
+		<img src="../images/{{include.img}}" alt="{{include.alt}}">
+		<figcaption class="fig-box">
+			<a class="fig-link" href="gabrielmitchell.ca/work/{{include.link}}"><h3 class="planet center-text white">{{include.title}}</h3></a>
+		</figcaption>
+	</figure>
+</div>
 	
-		  <ul class="slides unit-r unit-s-1 unit-m-1 unit-l-1 unit-xl-1">
-			<li data-thumb="{{include.thumb1}}">
-				<div>
-					<img src="{{include.img1}}" alt="{{include.alt1}}">
-				</div>
-			</li>
-			
-			<li data-thumb="{{include.thumb2}}">
-				<div>
-					<img src="{{include.img2}}" alt="{{include.alt2}}">
-				</div>
-			</li>
-			
-			<li data-thumb="{{include.thumb3}}">
-				<div>
-					<img src="{{include.img3}}" alt="{{include.alt3}}">
-				</div>
-			</li>
-			
-			<li data-thumb="{{include.thumb4}}">
-				<div>
-					<img src="{{include.img4}}" alt="{{include.alt4}}">
-				</div>
-			</li>
-			
-			<li data-thumb="{{include.thumb5}}">
-				<div>
-					<img src="{{include.img5}}" alt="{{include.alt5}}">
-				</div>
-			</li>
-			
-			<li data-thumb="{{include.thumb6}}">
-				<div>
-					<img src="{{include.img6}}" alt="{{include.alt6}}">
-				</div>
-			</li>
-			
-			<li data-thumb="{{include.thumb7}}">
-				<div>
-					<img src="{{include.img7}}" alt="{{include.alt7}}">
-				</div>
-			</li>
-			
-			<li data-thumb="{{include.thumb8}}">
-				<div>
-					<img src="{{include.img8}}" alt="{{include.alt8}}">
-				</div>
-			</li>
-		  </ul>
-
-		<div class="about wrap unit-r unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8 unit-xxl-2-8">
-			<div class="accordion">
-				<ul>
-					<li>
-						<h3 class="center-text planet w100">About {{include.title}}</h3>
-						<p class="cell w400">{{include.about}}</p>
-					</li>
-				</ul>
-			</div>
-		</div>		<!-- end div for About this Project module -->
-
-		</div>
-	</div>	<!-- end div for wrap around piece -->
-</div> <!-- end div for piece -->
 <!--
 
-<style type="text/css" media="screen">  
-	<![CDATA[  
-	#mountians,
-	#smallhouse
-	#light{  
-		transition: .5s;  
-		-webkit-transition: .5s;  
-		-moz-transition: .5s;  
-		-ms-transition: .5s;  
-		-o-transition: .5s;  
-	}  
-	#mountians:hover polygon {  
-	}  
-	
-	#smallhouse:hover #light {
-		fill: #FBAE17;
-	}
-	]]>  
-</style>
+		<li class="unit unit-s-1 unit-m-3-8 unit-l-3-8 unit-xl-2-8 unit-xxl-2-8">
+			<a href="gabrielmitchell.ca/work/{{link}}">
+				<img src="{{include.img}}" alt="{{include.alt}}">
+			</a>
+		</li>
 
-
-
-		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400/FFA500/778899" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400/FFFFFF/FFA500" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400/778899/FFFFFF" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400/FFFFFF/FFA500" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400/E14825/778899" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
-		</div>
-		-->
-		<!--
-	<input type="checkbox" id="op"></input>
-		<div class="lower">
-		  <label for="op">click the text</label>
-		</div>
-		<div class="overlay overlay-hugeinc">
-					<label for="op"></label>
-					<nav>
-						<ul>
-							<li><a href="#">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Work</a></li>
-							<li><a href="#">Clients</a></li>
-							<li><a href="#">Contact</a></li>
-						</ul>
-					</nav>
-					
-			<img src="../images/logo3.svg" alt="hi" class="object-center unit-s-1 unit-m-4-8 unit-l-3-8 unit-xl-1-8 unit-xxl-1-16">
-			<h2>name</h2>
-			<p>hi</p>-->
-		</div>
+-->
