--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -57,15 +57,16 @@ object {
 }
 
 .contact ul {
+	width: 100%;
 	display: block;
 	margin: 0 auto;	
+	overflow: hidden;
 }
 
 @media only screen and (min-width: 100em) {
 	.contact ul li a img {
 		width: 250px;
 	}
-
 }
 
 @media only screen and (min-width: 0em) {
@@ -77,7 +78,6 @@ object {
 		top: 2%;
 		left: 42.5%;
 	}
-	
 }
 
 @media only screen and (min-width: 30em) {
