--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -3,7 +3,7 @@
 	<figure class="piece-img unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1 unit-xxl-1">
 		<img src="../images/{{include.img}}" alt="{{include.alt}}">
 		<figcaption class="fig-box">
-			<a class="fig-link" href="gabrielmitchell.ca/work/{{include.link}}"><h3 class="planet center-text white">{{include.title}}</h3></a>
+			<a class="fig-link" href="work/{{include.link}}"><h3 class="planet center-text white">{{include.title}}</h3></a>
 		</figcaption>
 	</figure>
 </div>
