--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -47,7 +47,7 @@
 	{{content}}
 	
 	
-	<small class="string center-text w100"><p>2015 © Gabriel Mitchell.</p></small>
+	<small class="string center-text w100"><p>2015 © Gabriel Mitchell</p></small>
 	
 	<!-- JQUERY -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>	
