--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,6 @@
-<h2 class="center-text">Let's Create Some Cool Stuff Together!</h2>
+<h2 class="center-text">Together, We'll Create Stories</h2>
 <h6 class="cell center-text top-none">Get in touch or send me secret messages in Morse code</h6>
-<p class="w400 center-text">Tele: <em>613</em> 715 0942</p>
-<p class="w400 center-text">E-mail: heythere@gabrielmitchell.ca</p>
+<p class="w400 center-text">Phone: 613 715 0942 &times; E-mail: heythere@gabrielmitchell.ca</p>
 
 <div class="contact nav-bar-center unit-s-6-8 unit-m-3-8 unit-l-2-8 unit-xl-2-8">
 	<ul class ="unit-s-1">
