--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -284,6 +284,15 @@ hr {
 .bottom-some {
 	margin-bottom: 1rem;
 }
+
+.about {
+	margin-top: 5rem;
+	margin-bottom: 5rem;
+}
+.about-text {
+	line-height: 1.85rem;
+}
+	
 /*
 .piece {
 	margin-bottom: 3rem;
