--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -78,7 +78,7 @@ LIGHTSLATEGRAY
 	text-decoration: none;
 	display: inline-block;
 	text-align: center;
-	color: #FA8072; 
+	color: #666; 
 	-webkit-transition: .35s;
 	-moz-transition: .35s;
 	-ms-transition: .35s;
