--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -162,18 +162,23 @@ a:link {
 }
 
 a:visited {
-	color: #666;
+	color: #FA8072;
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: #FFA500;
+	color: #f5f5f5;
 }
 
 a:hover,
 a:active {
-	outline:none;
+	outline: none;
+}
+
+a:focus {
+	background-color: #708090;
+	outline: 1px solid white;
 }
 
 .ohno-text {
@@ -283,6 +288,10 @@ hr {
 
 .bottom-some {
 	margin-bottom: 1rem;
+}
+
+.bottom-tons {
+	margin-bottom: 6.5rem;
 }
 
 .about {
