refactor(about): about update

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,3 +1,4 @@
 <div class="about center-object unit-s-1 unit-m-5-8 unit-l-5-8 unit-xl-4-8">
 	<p class="planet w300 salmon v-align bottom-none about-text grey">Hey there! My name is Gabriel. I'm a creative who loves paper, packaging, branding, handmade things, and illustration. Every design tells a story, and I utilize emotive and tactile experiences to make that story worth telling.</p>
+	<p>Other things I enjoy are: astrophotography/stargazing, infrared landscape photography, bookbinding, getting sufficiently lost on the Trans Canada Pathway, and travelling.</p>
 </div>
