refactor(contact): Communications Update
Congratulations, JACKPINE.

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
 <h3 class="center-text bottom-none bottom-some w400">Together, We'll Create Stories</h2>
-<h6 class="cell center-text top-none grey">Get in touch or send me secret messages in Morse code</h6>
+<h6 class="cell center-text top-none grey">Get in touch or send me secret messages in Binary code</h6>
 <p class="w300 center-text"><strong>Phone:</strong> 613 715 0942 &times; <strong>E-mail:</strong> heythere@gabrielmitchell.ca</p>
 
 <div class="contact nav-bar-center unit-s-6-8 unit-m-3-8 unit-l-2-8 unit-xl-2-8">
