fix(js): revert remove scroll

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,19 +2,19 @@
 	<nav class="nav">
 		<ul class="organism unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1">
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
-				<a href="http://gabrielmitchell.ca/#work">
+				<a href="#work">
 				<img src="images/logo3.svg" alt="" class="menu-btn">
 					Work
 				</a>
 			</li>
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
-				<a href="http://gabrielmitchell.ca/#about">
+				<a href="#about">
 				<img src="images/logo3.svg" alt="" class="menu-btn">
 					About
 				</a>
 			</li>
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
-				<a href="http://gabrielmitchell.ca/#contact">
+				<a href="#contact">
 				<img src="images/logo3.svg" alt="" class="menu-btn">
 					Contact
 				</a>
