feat(contact): links open in new tab
ta da!

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,17 +5,17 @@
 <div class="contact nav-bar-center unit-s-6-8 unit-m-3-8 unit-l-2-8 unit-xl-2-8">
 	<ul class ="unit-s-1">
 		<li class="unit unit-s-33 unit-m-33 unit-l-33 unit-xl-33">
-			<a href="http://design-and-disdain.tumblr.com/" id="tumblr">
+			<a href="http://design-and-disdain.tumblr.com/" id="tumblr" target="_blank">
 				<img src="/images/icon-tumblr.svg" alt="Link to awesome things on Tumblr" class="tumblr">
 			</a>
 		</li>
 		<li class="unit unit-s-33 unit-m-33 unit-l-33 unit-xl-33">
-			<a href="https://twitter.com/thericeshogun">
+			<a href="https://twitter.com/thericeshogun" target="_blank">
 				<img src="/images/icon-twitter.svg" alt="Link to weird conversations on Twitter" class="twitter">
 			</a>
 		</li>
 		<li class="unit unit-s-33 unit-m-33 unit-l-33 unit-xl-33">
-			<a href="http://instagram.com/gabedrawstype">
+			<a href="http://instagram.com/gabedrawstype" target="_blank">
 				<img src="/images/icon-instagram.svg" alt="Link to Photos on Instagram"  class="instagram">
 			</a>
 		</li>
